--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
     "@types/react": "^18.3.12",
     "cloudinary": "^2.2.0",
     "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "react-instantsearch": "^7.12.3",
-    "react-instantsearch-nextjs": "^0.3.8",
-    "react-instantsearch-router-nextjs": "^7.12.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "suneditor": "^2.46.2",
     "suneditor-react": "^3.6.1",
     "react-icons": "^5.3.0",
