--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/react": "^18.3.12",
+    "axios": "^1.7.9",
     "cloudinary": "^2.2.0",
     "next": "15.0.2",
     "react": "^18.2.0",
