--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "next": "15.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
     "react-tabs": "^6.0.2",
     "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
+    "stats.js": "^0.17.0",
     "suneditor": "^2.46.2",
     "suneditor-react": "^3.6.1",
     "swiper": "^11.1.14",
