--- a/package.json
+++ b/package.json
@@ -20,13 +20,10 @@
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-spring": "^9.7.4",
-    "react-tabs": "^6.0.2",
-    "sharp": "^0.33.5",
-    "slick-carousel": "^1.8.1",
-    "stats.js": "^0.17.0",
     "suneditor": "^2.46.2",
+    "next-auth": "^4.24.10",
+    "socket.io-client": "^4.8.1",
     "suneditor-react": "^3.6.1",
-    "swiper": "^11.1.14",
     "swr": "^2.3.0",
     "uploadthing": "^7.4.4"
   },
