Fix the add to cart

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 # NEXT_PUBLIC_API_URL=http://localhost:5000
 
-NEXT_PUBLIC_API_URL=https://a-b-server.onrender.com
+NEXT_PUBLIC_API_URL=https://a-b-server.vercel.app
 
 # NEXT_PUBLIC_CLIENT_SIDE_URL=https://bestprice.co.ke
 
