--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.810.0",
+    "@aws-sdk/s3-request-presigner": "^3.810.0",
     "@uploadthing/react": "^7.1.5",
     "@types/react": "^18.3.12",
     "next": "15.0.2",
