--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.810.0",
     "@aws-sdk/s3-request-presigner": "^3.810.0",
-    "@uploadthing/react": "^7.1.5",
     "@types/react": "^18.3.12",
+    "@uploadthing/react": "^7.1.5",
+    "lucide-react": "^0.534.0",
     "next": "15.0.2",
+    "next-auth": "^4.24.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.4.0",
     "suneditor": "^2.46.2",
-    "next-auth": "^4.24.10",
     "suneditor-react": "^3.6.1",
     "swr": "^2.3.0",
     "uploadthing": "^7.4.4"
